# checkmk-json-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cmk_addons/plugins/json_api/agent_based/: json_api.py
cmk_addons/plugins/json_api/checkman/: json_api
cmk_addons/plugins/json_api/graphing/: json_api.py
cmk_addons/plugins/json_api/libexec/: agent_json_api
cmk_addons/plugins/json_api/rulesets/: special_agent.py
cmk_addons/plugins/json_api/server_side_calls/: special_agent.py
docs/: exchange-listing.md
explorer/: index.html
scripts/: build_mkp.py
tests/: conftest.py  test_agent.py  test_check.py  test_graphing.py  test_ruleset.py  test_server_side_calls.py
